k8s/productivity/perplexideez/service.yml
apiVersion: v1
kind: Service
metadata:
  name: perplexideez
  namespace: productivity
  labels:
    app: perplexideez
spec:
  selector:
    app: perplexideez
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: metrics
